Changelog for GEMC
==================

8/17/16
 - implementation / test of charge / time information for calorimeter.
 - starting to write output implementation for charge / time information. TXT in progress

8/16/16
 - introducing chargeTime output in the output factory
 - introducing two new pure virtual functions to be implemented in the hit process routines:

    -  map< int, vector <double> > chargeTime(MHit*, int): will provide 4 outputs:

        #. step index
        #. charge (as seen by a PMT) for a given step
        #. time (as arriving to the PMT) for a given step
        #. hit number

    -  double voltage(double charge, double time, double forTime): returns a voltage for an asked time given a charge/time signal



8/12/16
 - temp reinstatement of scintillatorB until we get Birks Constant in the API

8/11/16
 - getStringVectorFromString and getStringVectorFromStringWithDelimiter from mlibrary
 - replaceCharInStringWithChars from mlibrary
 - getting timewindow and start time from primary generator
 - rf signal added in event action
 - added rf bank
 - implemented txt and evio rf writers
 - added rf writer to event action

8/10/16
 - mlibrary gstring introduced: string manipulation library. This will replace many methods that do not belong in gemc
 - changelog finalized up to 2/4/2008
 - adding RF option"

8/9/16
 - ctof paddle length in the ctof constants - not derived by dimensions as ctof is now from CAD.
 - getting local position in cad paddle

8/2/16
 - fixed bug that affected gaussian spread of vertex in case z was not centered.

8/1/16
 - added position, rotation tag to GDML
 - fixed cad.gxml naming: removing path from name

7/29/16
 - added two public function to get timewindow and start time from generatorAction

7/28/16
 - added attributes modifier for cad imports:

    - position
    - rotation

 - added CAD and GDML reading of hit definitions
 - protecting against a too low production threshold